Fix: avatar image distorted

--- a/sources/ts/components/Header/Header.module.css
+++ b/sources/ts/components/Header/Header.module.css
@@ -145,6 +145,7 @@
     width: 35px;
     height: 35px;
     border-radius: 50%;
+    object-fit: cover;
 }
 
 .header-item-text-top,
